Version 1.4.1
~~~~~~~~~~~~~
* Post DiFX-1.5.4
* NOTE: Active version is now in DiFX-2.0

Version 1.4
~~~~~~~~~~~
* Check that input file exists before attempting correlation
* mk5dir: Mark4 directories from after 2009 Dec 31 would end up with wrong MJD
* Support for Streamstor SDK 9.0
* Support for difxVersion in difxStartMessage
* Don't launch a job near time(0)%10 = 5 to avoid getModules clash
* Add "recover" Mark5 utility
* Add mk5erase (similar to SSErase from Haystack) 
* Fix timerange mk5cp and add byterange copy
* Use mark5ipc to lock out access to /dev/windrvr6 
* Remove compatibility with Mark5A program
* Add very nascent mk5lock utility
* mk5dir: now by default will change the disk module state
* testmod: add timing
* add mk5cat
* vsn: write protection setting and getting
* Version for DiFX-1.5.4

Version 1.3
~~~~~~~~~~~
* set svn properties
* mk5dir, mk5cp: use XLRGetDirectory to work around streamstor bug
* mk5dir: add --force option
* mount and dismount commands (not using DBUS yet)
* make destination directory before copy
* Mark5 maint programs testmod and vsn added
* checkdi: ultraverbose mode (-v -v -v -v) to print nicely formatted list of scans (thanks Adam)
* remove auto-starting of the Mark5A program
* Fix compiler warnings and move to safer string manipulation
* rename .c to .cpp to reflect the fact that g++ is needed
* close popen with pclose (suggested by Martin Ettl)
* complain if /tmp or correlation destination directory are running low on space
* update in-line help for mk5control
* infrastructure in place for transient event copy
* checkdir: allow 800 frames per second mode
* Version for DiFX-1.5.3

Version 1.2
~~~~~~~~~~~
* mk5dir -- add suffix to distinguish otherwise identically named scans
* Clean up permissions and ownership issues when spawning jobs
* Improve bankswitching
* Version for DiFX-1.5.2

Version 1.1
~~~~~~~~~~~
* XLRClose / XLROpen after XLRSelectBank to prevent read errors
* add checkdir
* Version for DiFX-1.5.1
